--- a/portfolio.css
+++ b/portfolio.css
@@ -136,6 +136,13 @@ section:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
+/* Media query para ajustar as imagens quando a largura da tela for menor */
+@media screen and (max-width: 768px) {
+    .projeto .menproject img {
+        max-width: 100%; /* Reduzir a largura das imagens para ocupar a largura total da tela */
+    }
+}
+
 .projeto h3 {
     font-size: 24px;
     margin: 20px 0;
